[gd_scene load_steps=5 format=2]

[ext_resource path="res://Level00.tscn" type="PackedScene" id=1]
[ext_resource path="res://SceneTransition.gd" type="Script" id=3]

[sub_resource type="World" id=1]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
pause_mode = 1
size = Vector2( 250, 150 )
own_world = true
world = SubResource( 1 )
usage = 0
render_target_v_flip = true
audio_listener_enable_2d = true

[node name="Level" parent="Viewport" instance=ExtResource( 1 )]

[node name="ViewportSprite" type="Sprite" parent="."]
texture = SubResource( 2 )
centered = false

[node name="OtherSprite" type="Sprite" parent="."]
centered = false

[node name="Tween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 25.0
margin_right = 250.0
margin_bottom = 39.0
rect_min_size = Vector2( 250, 0 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="scene_change" from="Viewport/Level" to="." method="_on_scene_change"]
